dnl Process this file with autoconf to produce a configure script.
AC_INIT(Sort.cc)

dnl Checks for programs.

dnl Checks for libraries.
dnl Replace `main' with a function in -lX11:
AC_CHECK_LIB(X11, main)

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME

dnl Checks for library functions.
AC_CHECK_FUNCS(gettimeofday)

AC_SUBST(x_libraries)
AC_SUBST(x_includes)


AC_OUTPUT(Makefile)
